force-app/main/default/objects/bpats__ATS_JSON_Mapping__mdt/bpats__ATS_JSON_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ATS JSON Mapping</label>
    <pluralLabel>ATS JSON Mappings</pluralLabel>
</CustomObject>