force-app/main/default/objects/bpats__ATS_JSON_Mapping__mdt/fields/bpats__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>