force-app/main/default/objects/bpats__ATS_JSON_Mapping__mdt/fields/bpats__Remove_HTML__c.field-meta.xml
<CustomField>
    <fullName>bpats__Remove_HTML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove HTML</label>
    <type>Checkbox</type>
</CustomField>