force-app/main/default/objects/bpats__ATS_JSON_Mapping__mdt/fields/bpats__Text_Length__c.field-meta.xml
<CustomField>
    <fullName>bpats__Text_Length__c</fullName>
    <label>Text Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>